@@ -71,6 +71,8 @@ class PDF2XHTML extends AbstractPDF2XHTML {
     private static final List<String> JP2 =
             Arrays.asList(COSName.JPX_DECODE.getName());
 
+    private static final List<String> JB2 = Arrays.asList(
+            COSName.JBIG2_DECODE.getName());
     /**
      * This keeps track of the pdf object ids for inline
      * images that have been processed.
@@ -214,23 +216,12 @@ class PDF2XHTML extends AbstractPDF2XHTML {
                     extension = "tif";
                 } else if (extension.equals("jpx")) {
                     embeddedMetadata.set(Metadata.CONTENT_TYPE, "image/jp2");
-                }
-
-                // PDFBox does not yet return JBIG2 extension and extracting
-                // inline JBIG2 images fails with test file testPDF_JBIG2.pdf
-                // if we explicitely set the content type to image/x-jbig2
-                // (no "pages" are found when image is embedded).
-                // It works when it thinks it is PNG so we do not force it to
-                // jb2 for parsing until this issue is addressed in PDFBox and
-                // Levigo jbig2-imageio.  Will result in bad content-type in
-                // metadata for now, but that's better than not being able to
-                // handle JBIG2 in PDFs at all.
-                //                } else if (extension.equals("jb2")) {
-                //                    embeddedMetadata.set(
-                //                            Metadata.CONTENT_TYPE, "image/x-jbig2");
-                else {
+                } else if (extension.equals("jb2")) {
+                    embeddedMetadata.set(
+                            Metadata.CONTENT_TYPE, "image/x-jbig2");
+                } else {
                     //TODO: determine if we need to add more image types
-                    //throw new RuntimeException("EXTEN:" + extension);
+//                    throw new RuntimeException("EXTEN:" + extension);
                 }
 
                 Integer imageNumber = processedInlineImages.get(cosStream);
@@ -307,12 +298,17 @@ class PDF2XHTML extends AbstractPDF2XHTML {
                 InputStream data = pdImage.createInputStream(JP2);
                 org.apache.pdfbox.io.IOUtils.copy(data, out);
                 org.apache.pdfbox.io.IOUtils.closeQuietly(data);
-            } else {
+            } else if ("jb2".equals(suffix)) {
+                InputStream data = pdImage.createInputStream(JB2);
+                org.apache.pdfbox.io.IOUtils.copy(data, out);
+                org.apache.pdfbox.io.IOUtils.closeQuietly(data);
+            } else{
                 ImageIOUtil.writeImage(image, suffix, out);
             }
         }
         out.flush();
     }
+
 
     @Override
     protected void writeParagraphStart() throws IOException {
