@@ -17,6 +17,8 @@ Release 2.0 - ???
 
 Release 1.15 -???
 
+  * Upgrade PDFBox to 2.0.5 and JempBox to 1.8.13 (TIKA-2236).
+
   * Extract images and thumbnails from ODT via Sam Bayer (TIKA-2295).
 
   * Enabled configuration of the EncodingDetector used by
